force-app/main/default/objects/Partial_Release__c/Partial_Release__c.object-meta.xml
<CustomObject>
    <label>Partial Release</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Partial Release Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partial Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>