force-app/main/default/objects/Partial_Release__c/fields/Completed_date__c.field-meta.xml
<CustomField>
    <fullName>Completed_date__c</fullName>
    <label>Completed date</label>
    <type>Date</type>
</CustomField>