force-app/main/default/objects/Partial_Release__c/fields/Days_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Resolve__c</fullName>
    <formula>Completed_date__c -  DATEVALUE(CreatedDate)</formula>
    <label>Days to Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>