force-app/main/default/objects/Partial_Release__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Partial Releases</relationshipLabel>
    <relationshipName>Partial_Releases</relationshipName>
    <type>Lookup</type>
</CustomField>