force-app/main/default/objects/Partial_Release__c/fields/Released_Collateral__c.field-meta.xml
<CustomField>
    <fullName>Released_Collateral__c</fullName>
    <label>Released Collateral</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>