force-app/main/default/objects/Partial_Release__c/fields/UPB_at_Release__c.field-meta.xml
<CustomField>
    <fullName>UPB_at_Release__c</fullName>
    <label>UPB at Release</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>